--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </form>
         </div>
         <div style="text-align: right;font-size:10px">
-            v-1.0.0
+            v-1.0.1
         </div>
     </div>
 
@@ -211,7 +211,9 @@
             if (isUpper) car = car.toUpperCase()
 
             if (removeValue?.length) {
-                removeValue.forEach(x => car = car.replace(x, ""))
+                removeValue.forEach(find => {
+                    car = car.split(find).join('')
+                })
             }
 
             document.transcription.textCyr.value = car;
@@ -295,7 +297,9 @@
             if (isUpper) car = car.toUpperCase()
 
             if (removeValue?.length) {
-                removeValue.forEach(x => car = car.replace(x, ""))
+                removeValue.forEach(find => {
+                    car = car.split(find).join('')
+                })
             }
 
             document.transcription.textLat.value = car;
